finished table resize functionality

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,6 +12,7 @@ $font-size-default: 12px;
 $t-color-main: #000000;
 $t-color-second: #888888;
 $t-color-decor: green;
+$t-color-decor2: #3c74ff;
 
 $bg-white: #fff;
 
@@ -20,5 +21,6 @@ $row-info-color: #f8f9fa;
 $border-color-main: #c0c0c0;
 $border-cell: #e2e3e3;
 $bg-color-decor: $t-color-decor;
+$bg-color-decor2: $t-color-decor2;
 
 $z-index-modal: 1000;
