--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -17,6 +17,7 @@
   }
 
   .row-info {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,11 +36,13 @@
   }
 
   .column {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     background: $row-info-color;
-    min-width: $cell-width;
+    min-width: 40px;
+    width: $cell-width;
     border: 1px solid $border-color-main;
     height: 100%;
     border-top-color: transparent;
@@ -47,9 +50,11 @@
   }
 
   .cell {
-    min-width: $cell-width;
+    min-width: 40px;
+    width: $cell-width;
     padding: 5px;
     height: 100%;
+    color: #111;
     border: 1px solid $border-cell;
     border-top-color: transparent;
     border-left-color: transparent;
@@ -59,6 +64,38 @@
       border: none;
       outline: 2px solid #3c74ff;
       z-index: 2;
+    }
+  }
+
+  .col-resize,
+  .row-resize {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: $bg-color-decor2;
+    opacity: 0;
+    z-index: $z-index-modal;
+
+    &:hover {
+      opacity: 1 !important;
+    }
+  }
+
+  .col-resize {
+    top: 0;
+    width: 4px;
+
+    &:hover {
+      cursor: col-resize;
+    }
+  }
+
+  .row-resize {
+    left: 0;
+    height: 4px;
+
+    &:hover {
+      cursor: row-resize;
     }
   }
 }
